Image crop/resize fixes and improvements

--- a/src/SerialLoops/Assets/Strings.en-GB.resx
+++ b/src/SerialLoops/Assets/Strings.en-GB.resx
@@ -199,7 +199,7 @@
   <data name="Apply Template" xml:space="preserve">
     <value>Apply Template</value>
   </data>
-  <data name="Arrow Keys - Move Image" xml:space="preserve">
+  <data name="ImageCropResizeInstructions" xml:space="preserve">
     <value>Arrow Keys - Move Image</value>
   </data>
   <data name="Asahina companion selected description" xml:space="preserve">
