--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -228,8 +228,11 @@
     <value>Apply Template</value>
     <comment>The template in question is a script template</comment>
   </data>
-  <data name="Arrow Keys - Move Image" xml:space="preserve">
-    <value>Arrow Keys - Move Image</value>
+  <data name="ImageCropResizeInstructions" xml:space="preserve">
+    <value>Arrow Keys - Move Image
++/- - Zoom In/Out
+
+Hold Shift to increase step</value>
   </data>
   <data name="Asahina companion selected description" xml:space="preserve">
     <value>Asahina companion selected description</value>
