--- a/src/SerialLoops/Assets/Strings.zh-Hans.resx
+++ b/src/SerialLoops/Assets/Strings.zh-Hans.resx
@@ -206,7 +206,7 @@
   <data name="Apply Template" xml:space="preserve">
     <value>应用模板</value>
   </data>
-  <data name="Arrow Keys - Move Image" xml:space="preserve">
+  <data name="ImageCropResizeInstructions" xml:space="preserve">
     <value>方向键 - 移动图像</value>
   </data>
   <data name="Asahina companion selected description" xml:space="preserve">
