Add more tooltips

--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3569,10 +3569,10 @@ SELECT cannot be used in the initial, unnamed script block.</value>
   <data name="ScriptCommandParameterHelpDontClearText" xml:space="preserve">
     <value>If set, the text box will not be cleared and the next text will be displayed immediately. This allows for cool effects where you can change things like the text entrance effect, voice font, etc. in the same box.</value><comment>Help tooltip for the "Don't Clear Text" parameter of the DIALOGUE command</comment>
   </data>
-  <data name="ScriptCommandScreenFadeInParamWarning" xml:space="preserve">
-    <value>Should be the same as the previous SCREEN_FADEOUT command</value>
+  <data name="ScriptCommandScreenParamFadeInLocationHelp" xml:space="preserve">
+    <value>Should be the same as the previous SCREEN_FADEOUT command. In SCRIPT00 (the first fade of the scene), this must be Both screens for the fade to work properly.</value>
   </data>
-  <data name="ScriptCommandParameterHelpFadeColor" xml:space="preserve">
+  <data name="ScriptCommandParameterHelpFadeOutColor" xml:space="preserve">
     <value>The the color type to use. Except for special transitions, it is generally recommended to use Custom Color as it provides the most flexibility.</value>
   </data>
   <data name="ScriptCommandParameterHelpFadeCustomColor" xml:space="preserve">
@@ -3582,7 +3582,7 @@ SELECT cannot be used in the initial, unnamed script block.</value>
     <value>The screen to apply the fade to. Except for the initial fade in SCRIPT00, you must use Custom Color to fade both screens.</value>
   </data>
   <data name="ScriptCommandParameterHelpShakeDuration" xml:space="preserve">
-    <value>Set to -1 to shake the screen until the SCREEN_SHAKE_STOP command is executed</value>
+    <value>Set to -1 to shake the screen until the SCREEN_SHAKE_STOP command is executed. The game runs at 60 frames per second, so 60 frames is equivalent to 1 second.</value>
   </data>
   <data name="ScriptCommandParameterHelpSelectConditional" xml:space="preserve">
     <value>If this is left blank, the option is always shown. Otherwise, this is a conditional value that if evaluated to true will display the option and will hide it if false</value>
@@ -3632,5 +3632,14 @@ item in the dropdown!</value>
   </data>
   <data name="TabaloniaCloseAllToLeft" xml:space="preserve">
     <value>Close All to Left</value>
+  </data>
+  <data name="ScriptCommandParameterFadePercHelp" xml:space="preserve">
+    <value>If this is not set to the default value, the screen will not fully fade in/out. This should not be changed unless you are experimenting with a very specific effect.</value>
+  </data>
+  <data name="ScriptCommandScreenParamFadeInColorHelp" xml:space="preserve">
+    <value>Should be the same as the previous SCREEN_FADEOUT command. In SCRIPT00 (the first fade of the scene), this must be Black for the fade to work properly.</value>
+  </data>
+  <data name="FramesToSecondsHelp" xml:space="preserve">
+    <value>The game runs at 60 frames per second, so 60 frames is equivalent to 1 second.</value>
   </data>
 </root>
