--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3651,4 +3651,16 @@ item in the dropdown!</value>
   <data name="CharacterSpriteEditorSelectMouthFrames" xml:space="preserve">
     <value>Select mouth animation frames</value>
   </data>
+  <data name="ItemLocationLeft" xml:space="preserve">
+    <value>Left</value>
+  </data>
+  <data name="ItemLocationRight" xml:space="preserve">
+    <value>Right</value>
+  </data>
+  <data name="ItemLocationCenter" xml:space="preserve">
+    <value>Center</value>
+  </data>
+  <data name="ItemLocationExit" xml:space="preserve">
+    <value>Exit</value>
+  </data>
 </root>
