--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3681,4 +3681,7 @@ item in the dropdown!</value>
   <data name="SystemTextureEditorReplaceWithoutPaletteButtonText" xml:space="preserve">
     <value>Replace Without Palette Change</value>
   </data>
+  <data name="SystemTexturePaletteReplacementDisabledExtra" xml:space="preserve">
+    <value>This system texture uses the common extra mode palette, so palette replacement has been disabled.</value>
+  </data>
 </root>
