--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3694,6 +3694,6 @@ item in the dropdown!</value>
     <value>Failed to decode provided ogg file; only Vorbis and Opus codecs are supported.</value>
   </data>
   <data name="EmulatorLaunchFailedErrorMessage" xml:space="preserve">
-    <value>Failed to start emulator. Check the logs for more information."</value>
+    <value>Failed to start emulator. Check the logs for more information.</value>
   </data>
 </root>
